# fastapi-notesapp

./: Dockerfile.dev  README.md  pyproject.toml  render.yaml
notes_app/: main.py  model.py  settings.py
tests/: test_main.py
