[tool.poetry]
name = "notes-app"
version = "0.1.0"
description = ""
authors = ["mohsinraz3 <mohsinraz3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.8"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
